# chat_adjutant

./: alembic.ini  docker-compose.yaml  makefile  pyproject.toml
deploy/: backend.toml
src/: config.py
src/application/bot/: dispatch_update.py
src/application/common/: ai_adapter.py  exceptions.py  hello_message.py  message_gateway.py  thread_gateway.py  usecase.py  user_gateway.py
src/application/thread/: request_message.py
src/application/user/: init_user.py
src/domain/models/: thread.py  user.py
src/domain/services/: thread.py  user.py
src/infra/gemini/: adapter.py
src/infra/log/: processors.py  setup.py
src/infra/postgres/: models.py
src/infra/postgres/gateway/: base.py  message.py  thread.py  user.py
src/infra/postgres/migrations/: env.py
src/infra/postgres/migrations/versions/: f2d77e748bc9_init.py
src/main/: di.py  interactor_provider.py  main.py  usecase_provider.py  web.py
src/presentation/fastapi/: api.py  dependencies.py  setup.py
src/presentation/fastapi/view/: admin.py
src/presentation/telegram/: dependencies.py  middlewares.py  setup.py
src/presentation/telegram/routes/: fsm_state.py  handlers.py
